--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,38 +12,45 @@
         android:id="@+id/mimg"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_marginBottom="10dp"
-        android:scaleType="centerCrop"/>
+        android:layout_weight="1"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/mtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
+        android:text="Hello World!"
         android:textSize="20dp"
-        android:text="Hello World!" />
-
-    <Button
-        android:id="@+id/open"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Open File"
-        android:layout_marginTop="20dp"/>
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/compare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Compare"
-        android:visibility="gone"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:text="Match"/>
 
-    <Button
-        android:id="@+id/capture"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Capture"
-        android:layout_marginTop="20dp"/>
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/open"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Open File"
+            android:layout_marginRight="10dp"/>
+
+        <Button
+            android:id="@+id/capture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Capture"
+            android:layout_marginLeft="10dp"/>
+    </LinearLayout>
 </LinearLayout>
